Avoid extra gap between multiple verbal noun examples

--- a/anki-cards/style.css
+++ b/anki-cards/style.css
@@ -106,7 +106,7 @@ div + .adj,
 div + .nm,
 div + .nf,
 .adj div:not(.other) + .other,
-div + .vn{
+div:not(.vn) + .vn {
    margin-top: 0.6em;
 }
 .adj .noun {
